--- a/redis-noeviction-template.conf
+++ b/redis-noeviction-template.conf
@@ -3,7 +3,6 @@ port %(port)s
 bind %(host)s
 logfile /var/log/redis_%(port)s.log
 dir /var/lib/redis/%(port)s
-maxmemory %(maxmemory)s
 
 ##########
 # common #
@@ -60,14 +59,12 @@ no-appendfsync-on-rewrite no
 auto-aof-rewrite-percentage 0
 auto-aof-rewrite-min-size 64mb
 
-#######
-# NDS #
-#######
+###############
+# PERSISTENCE #
+###############
 
-nds yes
-nds-preload no
-nds-keycache yes
+save 900 1
+save 300 10
+save 60 10000
 
-save 1 1
-maxmemory-policy allkeys-lru
-maxmemory-samples 15
+maxmemory-policy noeviction
