--- a/redis-expire-template.conf
+++ b/redis-expire-template.conf
@@ -60,14 +60,12 @@ no-appendfsync-on-rewrite no
 auto-aof-rewrite-percentage 0
 auto-aof-rewrite-min-size 64mb
 
-#######
-# NDS #
-#######
+###############
+# PERSISTENCE #
+###############
 
-nds yes
-nds-preload no
-nds-keycache yes
+save 900 1
+save 300 10
+save 60 10000
 
-save 1 1
-maxmemory-policy allkeys-lru
-maxmemory-samples 15
+maxmemory-policy volatile-lru
